bookstore-devops/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # Image will be updated by GitHub Actions
        image: PLACEHOLDER_BACKEND_IMAGE # <-- THIS IS THE CHANGED LINE
        ports:
        - containerPort: 3001
        volumeMounts:
        - mountPath: "/app/backend/data"
          name: backend-storage
      volumes:
      - name: backend-storage
        persistentVolumeClaim:
          claimName: backend-pv-claim
