bookstore-devops/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP  # Keep as ClusterIP since it's internal
