bookstore-devops/kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80        # Updated to match Nginx port
    targetPort: 80   # Updated to match Nginx port
  type: ClusterIP  # Will be exposed via Ingress
